// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContextBox renders with defaultProps 1`] = `
<div
  className="ax-context-box ax-context-box--padding-large"
  style={
    Object {
      "maxHeight": undefined,
    }
  }
>
  Lorem ipsum
</div>
`;

exports[`ContextBox renders with hasFullSeparator renders with the full-separator element modifier 1`] = `
<div
  className="ax-context-box ax-context-box--padding-large ax-context-box--full-separator"
  style={
    Object {
      "maxHeight": undefined,
    }
  }
>
  Lorem ipsum
</div>
`;

exports[`ContextBox renders with maxHeight inserts an inline maxHeight style attribute 1`] = `
<div
  className="ax-context-box ax-context-box--padding-large"
  style={
    Object {
      "maxHeight": "5rem",
    }
  }
>
  Lorem ipsum
</div>
`;

exports[`ContextBox renders with padding large 1`] = `
<div
  className="ax-context-box ax-context-box--padding-large"
  style={
    Object {
      "maxHeight": undefined,
    }
  }
>
  Lorem ipsum
</div>
`;

exports[`ContextBox renders with padding none 1`] = `
<div
  className="ax-context-box ax-context-box--padding-none"
  style={
    Object {
      "maxHeight": undefined,
    }
  }
>
  Lorem ipsum
</div>
`;

exports[`ContextBox renders with padding small 1`] = `
<div
  className="ax-context-box ax-context-box--padding-small"
  style={
    Object {
      "maxHeight": undefined,
    }
  }
>
  Lorem ipsum
</div>
`;
